// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Strategies should convert price when param decimals differ from token decimals 1`] = `
[
  0.1000753990629655,
]
`;

exports[`Strategies should execute erc20-balance-of strategy with 6 decimals parameter on Base USDC 1`] = `
[
  1.000753990629655,
]
`;

exports[`Strategies should execute erc20-balance-of strategy with specific parameters 1`] = `
[
  17.08372160611956,
]
`;

exports[`Strategies should execute multiple strategies 1`] = `
[
  17.08372160611956,
  5608357053.118488,
]
`;

exports[`Strategies should execute pagination strategy with specific parameters 1`] = `
[
  17.08372160611956,
]
`;

exports[`Strategies should handle 0 decimals parameter correctly 1`] = `
[
  0.000001000753990629655,
]
`;
